common create playbook

--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -147,61 +147,64 @@
         state: present
       register: rds_sg
 
-    - name: Get RDS instance info
-      amazon.aws.rds_instance_info:
-        db_instance_identifier: "{{ rds_identifier }}"
-      register: rds_result
-
-    - name: Create RDS instance
-      when: rds_result.instances | length == 0
+    - name: RDS creation
+      when: not "aurora" in rds_engine
       block:
-        - name: Create RDS instance (PostGreSQL Database)
-          amazon.aws.rds_instance:
-            force_update_password: true
-            wait: true
-            allocated_storage: "{{ rds_allocated_storage_gb }}"
-            backup_retention_period: 0
-            db_instance_class: "{{ rds_instance_class }}"
+        - name: Get RDS instance info
+          amazon.aws.rds_instance_info:
             db_instance_identifier: "{{ rds_identifier }}"
-            db_name: "{{ rds_instance_name }}"
-            engine: "{{ rds_engine }}"
-            engine_version: "{{ rds_engine_version }}"
-            master_user_password: "{{ deploy_flask_app_rds_master_password }}"
-            master_username: "{{ deploy_flask_app_rds_master_username }}"
-            monitoring_interval: 0
-            storage_type: standard
-            skip_final_snapshot: true
-            db_subnet_group_name: "{{ rds_subnet_group_name }}"
-            vpc_security_group_ids:
-              - "{{ rds_sg.group_id }}"
-          when: rds_snapshot_arn is not defined
+          register: rds_result
 
-        - name: Create RDS instance from snapshot (PostGreSQL Database)
-          amazon.aws.rds_instance:
-            force_update_password: true
-            wait: true
-            allocated_storage: "{{ rds_allocated_storage_gb }}"
-            backup_retention_period: 0
-            db_instance_class: "{{ rds_instance_class }}"
+        - name: Create RDS instance
+          when: rds_result.instances | length == 0
+          block:
+            - name: Create RDS instance (PostGreSQL Database)
+              amazon.aws.rds_instance:
+                force_update_password: true
+                wait: true
+                allocated_storage: "{{ rds_allocated_storage_gb }}"
+                backup_retention_period: 0
+                db_instance_class: "{{ rds_instance_class }}"
+                db_instance_identifier: "{{ rds_identifier }}"
+                db_name: "{{ rds_instance_name }}"
+                engine: "{{ rds_engine }}"
+                engine_version: "{{ rds_engine_version }}"
+                master_user_password: "{{ deploy_flask_app_rds_master_password }}"
+                master_username: "{{ deploy_flask_app_rds_master_username }}"
+                monitoring_interval: 0
+                storage_type: standard
+                skip_final_snapshot: true
+                db_subnet_group_name: "{{ rds_subnet_group_name }}"
+                vpc_security_group_ids:
+                  - "{{ rds_sg.group_id }}"
+              when: rds_snapshot_arn is not defined
+
+            - name: Create RDS instance from snapshot (PostGreSQL Database)
+              amazon.aws.rds_instance:
+                force_update_password: true
+                wait: true
+                allocated_storage: "{{ rds_allocated_storage_gb }}"
+                backup_retention_period: 0
+                db_instance_class: "{{ rds_instance_class }}"
+                db_instance_identifier: "{{ rds_identifier }}"
+                engine: "{{ rds_engine }}"
+                engine_version: "{{ rds_engine_version }}"
+                master_user_password: "{{ deploy_flask_app_rds_master_password }}"
+                master_username: "{{ deploy_flask_app_rds_master_username }}"
+                monitoring_interval: 0
+                storage_type: standard
+                skip_final_snapshot: true
+                db_subnet_group_name: "{{ rds_subnet_group_name }}"
+                vpc_security_group_ids:
+                  - "{{ rds_sg.group_id }}"
+                creation_source: snapshot
+                db_snapshot_identifier: "{{ rds_snapshot_arn }}"
+              when: rds_snapshot_arn is defined
+
+        - name: Get RDS instance info
+          amazon.aws.rds_instance_info:
             db_instance_identifier: "{{ rds_identifier }}"
-            engine: "{{ rds_engine }}"
-            engine_version: "{{ rds_engine_version }}"
-            master_user_password: "{{ deploy_flask_app_rds_master_password }}"
-            master_username: "{{ deploy_flask_app_rds_master_username }}"
-            monitoring_interval: 0
-            storage_type: standard
-            skip_final_snapshot: true
-            db_subnet_group_name: "{{ rds_subnet_group_name }}"
-            vpc_security_group_ids:
-              - "{{ rds_sg.group_id }}"
-            creation_source: snapshot
-            db_snapshot_identifier: "{{ rds_snapshot_arn }}"
-          when: rds_snapshot_arn is defined
-
-    - name: Get RDS instance info
-      amazon.aws.rds_instance_info:
-        db_instance_identifier: "{{ rds_identifier }}"
-      register: rds_result
+          register: rds_result
 
     - name: Set 'sshkey_file' variable
       ansible.builtin.set_fact:
