--- a/playbooks/webapp/webapp.yaml
+++ b/playbooks/webapp/webapp.yaml
@@ -2,7 +2,6 @@
 - name: Webapp
   hosts: localhost
   gather_facts: false
-
   vars_files:
     - vars/main.yaml
 
@@ -14,11 +13,13 @@
 
     - name: Run operation create/delete
       ansible.builtin.import_tasks: tasks/{{ operation }}.yaml
+      vars:
+        bastion_host_type: t3.micro
+        deploy_flask_app_workers_instance_type: t3.micro
 
 - name: Deploy Flask App
   hosts: localhost
   gather_facts: false
-
   vars_files:
     - vars/main.yaml
 
@@ -32,3 +33,4 @@
         deploy_flask_app_vpc_id: "{{ vpc.vpc.id }}"
         deploy_flask_app_vm_info: "{{ vm_result }}"
         deploy_flask_app_rds_info: "{{ rds_result }}"
+        deploy_flask_app_workers_instance_type: t3.micro
