--- a/playbooks/webapp/migrate_webapp.yaml
+++ b/playbooks/webapp/migrate_webapp.yaml
@@ -2,7 +2,6 @@
 - name: Migrate webapp
   hosts: localhost
   gather_facts: false
-
   vars_files:
     - vars/main.yaml
 
@@ -53,6 +52,8 @@
       vars:
         rds_snapshot_arn: "{{ result.db_snapshot_arn }}"
         region: "{{ dest_region }}"
+        bastion_host_type: t3.micro
+        deploy_flask_app_workers_instance_type: t3.micro
 
     - name: Deploy app
       when: operation == "create"
@@ -64,6 +65,7 @@
         deploy_flask_app_vm_info: "{{ vm_result }}"
         deploy_flask_app_rds_info: "{{ rds_result }}"
         deploy_flask_app_region: "{{ dest_region }}"
+        deploy_flask_app_workers_instance_type: t3.micro
 
     - name: Delete RDS snapshots from different regions
       amazon.aws.rds_instance_snapshot:
@@ -77,4 +79,7 @@
 
     - name: Delete instance from source region
       ansible.builtin.import_tasks: tasks/delete.yaml
+      vars:
+        bastion_host_type: t3.micro
+        deploy_flask_app_workers_instance_type: t3.micro
       when: delete_source | default(false) | bool
