--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -1,8 +1,7 @@
 ---
 # Variables for create.yaml
-# aws_region: us-west-2
-dest_region: us-east-2
 resource_prefix: "ansible-test"
+dest_region: us-east-2
 vpc_name: "{{ resource_prefix }}-vpc"
 vpc_cidr: 10.1.0.0/16
 subnet_cidr:
@@ -14,9 +13,6 @@ resource_tags:
 operation: create
 
 image_filter: Fedora-Cloud-Base-35-*gp2-0
-# image_filter: RHEL-8.7.0_HVM-20221101-x86_64-0-Hourly2-GP2
-# image_filter: RHEL_HA-9.0.0_HVM-20230822-x86_64-17-Hourly2-GP2 - podman 503 error
-# image_filter: RHEL_HA-9.2.0_HVM-20230905-x86_64-38-Hourly2-GP2
 public_secgroup_name: "{{ resource_prefix }}-sg"
 rds_subnet_group_name: "{{ resource_prefix }}-rds-sg"
 rds_secgroup_name: "{{ resource_prefix }}-rds-sec"
@@ -26,7 +22,7 @@ rds_instance_class: db.m6g.large
 rds_instance_name: mysampledb123
 rds_engine: postgres
 rds_engine_version: "14.8"
-bastion_host_type: t3.micro
+bastion_host_type: t2.xlarge
 bastion_host_venv_path: ~/env
 rds_listening_port: 5432
 
