--- a/playbooks/webapp/webapp_ha_aurora.yaml
+++ b/playbooks/webapp/webapp_ha_aurora.yaml
@@ -2,17 +2,21 @@
 - name: webapp HA
   hosts: localhost
   gather_facts: false
-
   vars_files:
     - vars/main.yaml
+
   tasks:
     - name: Create resources and Deploy App
       when: operation == "create"
       block:
         - name: Create resources in primary region
-          ansible.builtin.include_tasks: tasks/create_aurora_setup.yaml
+          ansible.builtin.include_tasks: tasks/create.yaml
           vars:
             region: "{{ creation_region }}"
+            rds_instance_class: db.r5.large
+            rds_engine: aurora-postgresql
+            bastion_host_type: t3.micro
+            deploy_flask_app_workers_instance_type: t3.micro
           loop:
             - "{{ rds_primary_cluster_region }}"
             - "{{ rds_replica_cluster_region }}"
@@ -52,6 +56,7 @@
           ansible.builtin.include_role:
             name: cloud.aws_ops.deploy_flask_app
           vars:
+            deploy_flask_app_workers_instance_type: t3.micro
             deploy_flask_app_private_subnet_id: "{{ primary_private_subnet.subnets[0].id }}"
             deploy_flask_app_vpc_id: "{{ primary_vpc.vpcs[0].id }}"
             deploy_flask_app_vm_info: "{{ primary_vm_result }}"
@@ -91,6 +96,7 @@
           ansible.builtin.include_role:
             name: cloud.aws_ops.deploy_flask_app
           vars:
+            deploy_flask_app_workers_instance_type: t3.micro
             deploy_flask_app_private_subnet_id: "{{ replica_private_subnet.subnets[0].id }}"
             deploy_flask_app_vpc_id: "{{ replica_vpc.vpcs[0].id }}"
             deploy_flask_app_vm_info: "{{ replica_vm_result }}"
