--- a/roles/create_rds_global_cluster/tasks/create.yml
+++ b/roles/create_rds_global_cluster/tasks/create.yml
@@ -10,13 +10,13 @@
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
         engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
-        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         state: present
 
     - name: Create a primary cluster for global database in "{{ create_rds_global_cluster_primary_cluster_region }}"
       amazon.aws.rds_cluster:
         db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
-        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         master_username: "{{ create_rds_global_cluster_master_username }}"
@@ -30,14 +30,14 @@
       amazon.aws.rds_instance:
         db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
         db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name | default(default_primary_cluster_instance_name) }}"
-        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
 
     - name: Create a read replica cluster for global database in "{{ create_rds_global_cluster_replica_cluster_region }}"
       amazon.aws.rds_cluster:
         db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
-        region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
@@ -49,6 +49,6 @@
       amazon.aws.rds_instance:
         db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
         db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name | default(default_replica_cluster_instance_name) }}"
-        region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
         engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
