--- a/roles/create_rds_global_cluster/tasks/delete.yml
+++ b/roles/create_rds_global_cluster/tasks/delete.yml
@@ -8,7 +8,7 @@
     - name: Get replica cluster info
       amazon.aws.rds_cluster_info:
         cluster_id: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
-        region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
       register: create_rds_global_cluster_replica_cluster_info
 
     - name: If replica cluster exists
@@ -17,7 +17,7 @@
         - name: Delete instance attached to replica cluster if present
           amazon.aws.rds_instance:
             db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name | default(default_replica_cluster_instance_name) }}"
-            region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+            aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
             skip_final_snapshot: true
             wait: false
             state: absent
@@ -25,7 +25,7 @@
         - name: Delete replica cluster without creating a final snapshot
           amazon.aws.rds_cluster:
             cluster_id: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
-            region: "{{ create_rds_global_cluster_replica_cluster_region }}"
+            aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
             global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
             remove_from_global_db: true
             skip_final_snapshot: true
@@ -34,7 +34,7 @@
     - name: Get primary cluster info
       amazon.aws.rds_cluster_info:
         cluster_id: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
-        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
       register: create_rds_global_cluster_primary_cluster_info
 
     - name: If primary cluster exists
@@ -43,7 +43,7 @@
         - name: Delete instance attached to primary cluster if present
           amazon.aws.rds_instance:
             db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name | default(default_primary_cluster_instance_name) }}"
-            region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+            aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
             skip_final_snapshot: true
             wait: false
             state: absent
@@ -51,7 +51,7 @@
         - name: Delete primary cluster without creating a final snapshot
           amazon.aws.rds_cluster:
             cluster_id: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
-            region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+            aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
             global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
             skip_final_snapshot: true
             state: absent
@@ -60,7 +60,7 @@
     - name: Delete the global cluster
       amazon.cloud.rds_global_cluster:
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
-        region: "{{ create_rds_global_cluster_primary_cluster_region }}"
+        aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         state: absent
       register: create_rds_global_cluster_global_cluster_delete
 
