--- a/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
+++ b/tests/integration/targets/test_create_rds_global_cluster/defaults/main.yml
@@ -17,7 +17,7 @@ test_primary_cluster_instance_name: ansible-test-instance-primary-{{ tiny_prefix
 # Replica cluster parameters ================================
 test_replica_cluster_name: ansible-test-replica-{{ tiny_prefix }}
 test_replica_cluster_region: us-west-2
-test_replica_enable_global_write_forwarding: 'true'
+test_replica_enable_global_write_forwarding: true
 test_replica_cluster_instance_name: ansible-test-instance-replica-{{ tiny_prefix }}
 
 aws_security_token: '{{ security_token | default(omit) }}'
