rename default vars to remove default filter use

--- a/roles/create_rds_global_cluster/defaults/main.yml
+++ b/roles/create_rds_global_cluster/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for roles/create_rds_global_cluster
-default_engine_version: "aurora-postgresql"
-default_primary_cluster_name: "{{ create_rds_global_cluster_global_cluster_name }}-primary"
-default_replica_cluster_name: "{{ create_rds_global_cluster_global_cluster_name }}-replica"
-default_primary_cluster_instance_name: "{{ create_rds_global_cluster_global_cluster_name }}-primary-instance"
-default_replica_cluster_instance_name: "{{ create_rds_global_cluster_global_cluster_name }}-replica-instance"
+create_rds_global_cluster_engine: "aurora-postgresql"
+create_rds_global_cluster_primary_cluster_name: "{{ create_rds_global_cluster_global_cluster_name }}-primary"
+create_rds_global_cluster_replica_cluster_name: "{{ create_rds_global_cluster_global_cluster_name }}-replica"
+create_rds_global_cluster_primary_cluster_instance_name: "{{ create_rds_global_cluster_global_cluster_name }}-primary-instance"
+create_rds_global_cluster_replica_cluster_instance_name: "{{ create_rds_global_cluster_global_cluster_name }}-replica-instance"
