--- a/roles/create_rds_global_cluster/tasks/create.yml
+++ b/roles/create_rds_global_cluster/tasks/create.yml
@@ -8,16 +8,16 @@
     - name: Create rds global database
       amazon.cloud.rds_global_cluster:
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
-        engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
+        engine: "{{ create_rds_global_cluster_engine }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
         state: present
 
     - name: Create a primary cluster for global database in "{{ create_rds_global_cluster_primary_cluster_region }}"
       amazon.aws.rds_cluster:
-        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
+        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name }}"
         aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
+        engine: "{{ create_rds_global_cluster_engine }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         master_username: "{{ create_rds_global_cluster_master_username }}"
         master_user_password: "{{ create_rds_global_cluster_master_user_password }}"
@@ -28,17 +28,17 @@
 
     - name: Create an instance connected to primary cluster
       amazon.aws.rds_instance:
-        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name | default(default_primary_cluster_name) }}"
-        db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name | default(default_primary_cluster_instance_name) }}"
+        db_cluster_identifier: "{{ create_rds_global_cluster_primary_cluster_name }}"
+        db_instance_identifier: "{{ create_rds_global_cluster_primary_cluster_instance_name }}"
         aws_region: "{{ create_rds_global_cluster_primary_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
+        engine: "{{ create_rds_global_cluster_engine }}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
 
     - name: Create a read replica cluster for global database in "{{ create_rds_global_cluster_replica_cluster_region }}"
       amazon.aws.rds_cluster:
-        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
+        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name }}"
         aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
+        engine: "{{ create_rds_global_cluster_engine }}"
         engine_version: "{{ create_rds_global_cluster_engine_version }}"
         db_subnet_group_name: "{{ create_rds_global_cluster_db_subnet_group_name | default(omit) }}"
         global_cluster_identifier: "{{ create_rds_global_cluster_global_cluster_name }}"
@@ -47,8 +47,8 @@
 
     - name: Create an instance connected to secondary cluster
       amazon.aws.rds_instance:
-        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name | default(default_replica_cluster_name) }}"
+        db_cluster_identifier: "{{ create_rds_global_cluster_replica_cluster_name }}"
         db_instance_identifier: "{{ create_rds_global_cluster_replica_cluster_instance_name | default(default_replica_cluster_instance_name) }}"
         aws_region: "{{ create_rds_global_cluster_replica_cluster_region }}"
-        engine: "{{ create_rds_global_cluster_engine | default(default_engine_version) }}"
+        engine: "{{ create_rds_global_cluster_engine }}"
         db_instance_class: "{{ create_rds_global_cluster_instance_class }}"
