--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
@@ -24,7 +24,7 @@
             subnets:
               - "{{ subnet_id_b_1 }}"
 
-    - name: List all the transit gateway attachments
+    - name: List all the transit gateways
       community.aws.ec2_transit_gateway_info:
       register: manage_transit_gateway_gw_info
 
@@ -33,8 +33,16 @@
         gw: "{{ item }}"
       when:
         - item.description == "TGW for Cloud team"
-        - item.state == "available"
       loop: "{{ manage_transit_gateway_gw_info.transit_gateways }}"
+
+    - name: Wait until the transit gateway becomes available
+      community.aws.ec2_transit_gateway_info:
+        filters:
+          transit-gateway-id: '{{ gw.transit_gateway_id }}'
+      register: manage_transit_gateway_gw_available
+      retries: 30
+      delay: 5
+      until: manage_transit_gateway_gw_available.transit_gateways[0].state == 'available'
 
     - name: Describe attachments on a specific VPC
       community.aws.ec2_transit_gateway_vpc_attachment_info:
