--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpn_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpn_attachments.yml
@@ -2,7 +2,7 @@
 - name: Test 'manage_transit_gateway' role
   block:
     # Creation
-    - name: Create Transit Gateway with VPC attachemnt
+    - name: Create Transit Gateway with VPC attachment
       ansible.builtin.include_role:
         name: cloud.aws_ops.manage_transit_gateway
       vars:
