Fix test_backup_select_resources integration tests
Signed-off-by: Alina Buzachis <abuzachis@redhat.com>

--- a/roles/backup_select_resources/tasks/main.yaml
+++ b/roles/backup_select_resources/tasks/main.yaml
@@ -6,7 +6,7 @@
   loop:
     - backup_select_resources_backup_role_name
     - backup_select_resources_plan_name
-    - selection_name
+    - backup_select_resources_selection_name
     - backup_select_resources_selection_resources
 
 - name: Run backup_select_resources role
