--- a/tests/integration/targets/test_backup_select_resources/tasks/setup.yml
+++ b/tests/integration/targets/test_backup_select_resources/tasks/setup.yml
@@ -20,5 +20,6 @@
     name: cloud.aws_ops.backup_create_plan
   vars:
     backup_create_plan_vault_name: "{{ test_vault_name }}"
+    backup_create_plan_plan_name: "{{ plan_name }}"
     backup_create_plan_plan_rules:
-      - "{{ backup_create_plan_daily_backup }}"
+      - "{{ daily_backup }}"
