--- a/playbooks/webapp/vars/main.yaml
+++ b/playbooks/webapp/vars/main.yaml
@@ -39,7 +39,7 @@ deploy_flask_app_bastion_host_required_packages:
   - podman
   - httpd-tools
   - ansible-core
-deploy_flask_app_workers_instance_type: t3.micro
+deploy_flask_app_workers_instance_type: t2.xlarge
 deploy_flask_app_workers_user_name: fedora
 deploy_flask_app_number_of_workers: 2
 deploy_flask_app_listening_port: 5000
