--- a/playbooks/webapp/tasks/create.yaml
+++ b/playbooks/webapp/tasks/create.yaml
@@ -218,7 +218,17 @@
         mode: 0400
       when: rsa_key is changed
 
+    - name: Check if the vm exists
+      amazon.aws.ec2_instance_info:
+        filters:
+          instance-type: "{{ bastion_host_type }}"
+          key-name: "{{ deploy_flask_app_sshkey_pair_name }}"
+          vpc-id: "{{ vpc.vpc.id }}"
+          instance-state-name: running
+      register: vm_result
+
     - name: Create a virtual machine
+      when: vm_result.instances | length == 0
       amazon.aws.ec2_instance:
         name: "{{ deploy_flask_app_bastion_host_name }}"
         instance_type: "{{ bastion_host_type }}"
