--- a/playbooks/webapp/tasks/delete.yaml
+++ b/playbooks/webapp/tasks/delete.yaml
@@ -15,7 +15,7 @@
           tag:Name: "{{ vpc_name }}"
       register: vpc
 
-    - name: Deelete resources
+    - name: Delete resources
       when: vpc.vpcs | length == 1
       block:
         - name: Set 'vpc_id' variable
