--- a/tests/integration/targets/test_backup_select_resources/tasks/teardown.yml
+++ b/tests/integration/targets/test_backup_select_resources/tasks/teardown.yml
@@ -26,7 +26,7 @@
   ignore_errors: true
 
 - name: Delete IAM role created for test
-  community.aws.iam_role:
+  amazon.aws.iam_role:
     name: "{{ test_iam_role_name }}"
     state: absent
     wait: true
@@ -34,7 +34,7 @@
   ignore_errors: true
 
 - name: Delete IAM role created during test
-  community.aws.iam_role:
+  amazon.aws.iam_role:
     name: "{{ test_iam_role_name_new }}"
     state: absent
     wait: true
