update changelog fragments

--- a/changelogs/fragments/aws_setup_credentials_add_no_log.yml
+++ b/changelogs/fragments/aws_setup_credentials_add_no_log.yml
@@ -1,3 +1,3 @@
 ---
 bugfixes:
-  - add no_log to prevent credentials leak (https://github.com/redhat-cop/cloud.aws_ops/pull/92).
+  - roles/aws_setup_credentials - add no_log to prevent credentials leak (https://github.com/redhat-cop/cloud.aws_ops/pull/92).
