--- a/changelogs/fragments/20230817-update_for_controller.yml
+++ b/changelogs/fragments/20230817-update_for_controller.yml
@@ -1,4 +1,4 @@
 trivial:
   - "Update playbooks that include credentials to be able to be used with Automation Controller (not just the command line)"
 bugfixes:
-  - Update playbooks that include credentials to be able to be used with Automation Controller (not just the command line).  https://github.com/redhat-cop/cloud.aws_ops/pull/64
+  - playbooks/webapp/webapp - Update playbooks that include credentials to be able to be used with Automation Controller (not just the command line) (https://github.com/redhat-cop/cloud.aws_ops/pull/64).
